unpackaged/main/default/objects/Survey_Response__c/fields/Amount_learned_in_the_course__c.field-meta.xml
<CustomField>
    <fullName>Amount_learned_in_the_course__c</fullName>
    <label>Amount learned in the course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>