unpackaged/main/default/objects/Survey_Response__c/fields/average_amount_of_hours_spent_preparing__c.field-meta.xml
<CustomField>
    <fullName>average_amount_of_hours_spent_preparing__c</fullName>
    <label>average amount of hours spent preparing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>3-4</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>