unpackaged/main/default/objects/Survey_Response__c/fields/Best_assignments_or_activities__c.field-meta.xml
<CustomField>
    <fullName>Best_assignments_or_activities__c</fullName>
    <label>Best assignments or activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>