unpackaged/main/default/objects/Survey_Response__c/fields/Best_experiential_assignments_activities__c.field-meta.xml
<CustomField>
    <fullName>Best_experiential_assignments_activities__c</fullName>
    <label>Best experiential assignments/activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>