unpackaged/main/default/objects/Survey_Response__c/fields/Content_met_expectations_and_goals__c.field-meta.xml
<CustomField>
    <fullName>Content_met_expectations_and_goals__c</fullName>
    <label>Content met expectations and goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>