unpackaged/main/default/objects/Survey_Response__c/fields/Course_contributed_to_personal_growth__c.field-meta.xml
<CustomField>
    <fullName>Course_contributed_to_personal_growth__c</fullName>
    <label>Course contributed to personal growth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>