unpackaged/main/default/objects/Survey_Response__c/fields/Course_difficulty_given_credit_hours__c.field-meta.xml
<CustomField>
    <fullName>Course_difficulty_given_credit_hours__c</fullName>
    <label>Course difficulty given credit hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too difficult</fullName>
            </value>
            <value>
                <fullName>Just right</fullName>
            </value>
            <value>
                <fullName>Too easy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>