unpackaged/main/default/objects/Survey_Response__c/fields/Course_extra_comments__c.field-meta.xml
<CustomField>
    <fullName>Course_extra_comments__c</fullName>
    <label>Course extra comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>