unpackaged/main/default/objects/Survey_Response__c/fields/Effort_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Effort_Satisfaction__c</fullName>
    <label>Effort Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Very Unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>