unpackaged/main/default/objects/Survey_Response__c/fields/Experiential_activities_were_effective__c.field-meta.xml
<CustomField>
    <fullName>Experiential_activities_were_effective__c</fullName>
    <label>Experiential activities were effective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>