unpackaged/main/default/objects/Survey_Response__c/fields/Faculty_displays_mastery_of_subject__c.field-meta.xml
<CustomField>
    <fullName>Faculty_displays_mastery_of_subject__c</fullName>
    <label>Faculty displays mastery of subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>