unpackaged/main/default/objects/Survey_Response__c/fields/Faculty_extra_comments__c.field-meta.xml
<CustomField>
    <fullName>Faculty_extra_comments__c</fullName>
    <label>Faculty extra comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>