unpackaged/main/default/objects/Survey_Response__c/fields/Faculty_Member__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>