unpackaged/main/default/objects/Survey_Response__c/fields/Faculty_s_overall_effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Faculty_s_overall_effectiveness__c</fullName>
    <label>Faculty&#39;s overall effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>