unpackaged/main/default/objects/Survey_Response__c/fields/How_to_improve_the_course__c.field-meta.xml
<CustomField>
    <fullName>How_to_improve_the_course__c</fullName>
    <label>How to improve the course</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>