unpackaged/main/default/objects/Survey_Response__c/fields/Satisfactory_progress_on_learning__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_progress_on_learning__c</fullName>
    <label>Satisfactory progress on learning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>