unpackaged/main/default/objects/Survey_Response__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>