unpackaged/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Faculty_Member__c</columns>
    <columns>Student_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>